--- a/listen-pill/manifest.json
+++ b/listen-pill/manifest.json
@@ -1,15 +1,16 @@
 {
-    "manifest_version": 3,
-    "name": "Listen Demo (NatGeo)",
-    "version": "0.1.0",
-    "description": "Injects a Listen pill on National Geographic that opens the local reader in a new tab.",
-    "content_scripts": [
-      {
-        "matches": ["https://*.nationalgeographic.com/*"],
-        "js": ["content.js"],
-        "css": ["overlay.css"],
-        "run_at": "document_idle"
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Listen Demo (NatGeo)",
+  "version": "0.1.0",
+  "description": "Injects a Listen pill on National Geographic that opens the local reader in a new tab.",
+  "permissions": ["storage"],
+  "options_page": "options.html",
+  "content_scripts": [
+    {
+      "matches": ["https://*.nationalgeographic.com/*"],
+      "js": ["content.js"],
+      "css": ["overlay.css"],
+      "run_at": "document_idle"
+    }
+  ]
+}
