--- a/listen-pill/manifest.json
+++ b/listen-pill/manifest.json
@@ -1,17 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "Listen Demo",
-  "version": "0.3.0",
-  "description": "Launcher + modal audio reader for any article.",
-  "permissions": ["storage"],
+  "name": "Listen Pill (Dev)",
+  "version": "0.1.0",
+  "action": { "default_title": "Listen Pill" },
+  "options_page": "options.html",
+  "host_permissions": ["http://*/*", "https://*/*"],
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*"],
-      "js": ["content.js"],
+      "matches": ["http://*/*", "https://*/*"],
       "css": ["overlay.css"],
-      "run_at": "document_idle",
-      "all_frames": true,
-      "match_about_blank": true
+      "js": ["content.js", "tts-bridge.js"],
+      "run_at": "document_idle"
     }
   ]
 }
