--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-fastapi
-uvicorn
-requests
-python-dotenv
+﻿fastapi>=0.110,<1
+uvicorn[standard]>=0.30
+httpx>=0.27
+requests>=2.32
+trafilatura>=1.9
+python-dotenv>=1.0
+aiofiles>=23.2
+lxml>=5.2
+boto3>=1.35.100
